# clogging

./: .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile.am  README.md  UTF8_IMPLEMENTATION_SUMMARY.md  bootstrap.sh  build.bat  build.sh  configure.ac  format.py  index.html  params.json  readme-debug-build.md
cmake/: cloggingConfig.cmake.in  cloggingTargets.cmake
examples/: CMakeLists.txt  Makefile.am  logging.h  test_basic_logging.c  utf8_example.c  utf8_windows_example.c
examples/basic_logging_utf8/: CMakeLists.txt  basic_logging_utf8.c
examples/basic_logging_utf8_dynamic_lib/: CMakeLists.txt  basic_logging_utf8_dynamic_lib.c  logging.h
examples/basic_logging_utf8_json/: CMakeLists.txt  basic_logging_utf8_json.c
examples/basic_logging_utf8_multi_thread/: CMakeLists.txt  basic_logging_utf8_multi_thread_unix.c  basic_logging_utf8_multi_thread_win32.c  logging.h
examples/binary_logging_utf8/: CMakeLists.txt  binary_logging_utf8.c  logging.h
examples/fd_logging_utf8/: CMakeLists.txt  fd_logging_utf8.c  logging.h
examples/fd_logging_utf8_json/: CMakeLists.txt  fd_logging_utf8_json.c
libs/: Makefile.am  clogging.pc.in
src/: CMakeLists.txt  Makefile.am  basic_logging.c  basic_logging.h  binary_logging.c  binary_logging.h  fd_logging.c  fd_logging.h  logging.h  logging.h.sample  logging_common.c  logging_common.h  utf8_utils.c  utf8_utils.h
tests/: CMakeLists.txt  Makefile.am  logging.h  test_basic_logging.c  test_bench_basic_logging.c  test_bench_basic_logging_unix.c  test_bench_basic_logging_win32.c  test_bench_fd_logging.c  test_bench_fd_logging_unix.c  test_bench_fd_logging_win32.c  test_binary_logging.c  test_binary_logging_common.c  test_binary_logging_common.h  test_binary_logging_unix.c  test_binary_logging_win32.c  test_fd_logging.c  test_fd_logging_unix.c  test_fd_logging_win32.c  test_utf8_conversion_win32.c  test_utf8_logging.c  test_utf8_validation.c
