# Examples CMakeLists.txt
# Build example programs demonstrating various clogging features

# Add subdirectories for each example
add_subdirectory(basic_logging_utf8)
add_subdirectory(basic_logging_utf8_json)
add_subdirectory(basic_logging_utf8_dynamic_lib)
add_subdirectory(fd_logging_utf8)
add_subdirectory(fd_logging_utf8_json)
add_subdirectory(binary_logging_utf8)
